--- a/UpdateAddress/src/main/resources/bootstrap.properties
+++ b/UpdateAddress/src/main/resources/bootstrap.properties
@@ -1,3 +1,10 @@
 server.port=2066
 spring.application.name=UpdateAddress
 spring.cloud.config.uri=http://localhost:2011
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=employee
+spring.datasource.password=neeluramya
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
